--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -253,3 +253,7 @@ a {
 }
 @import url('https://fonts.googleapis.com/css2?family=Bonheur+Royale&display=swap');
 /* fim do header */
+
+i{
+  size: 30px;
+}
